JWT authentication and middleware

--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,8 @@
         "App\\": "app/",
         "Core\\": "core/"
       }
+    },
+    "require": {
+        "firebase/php-jwt": "^6.11"
     }
 }
-  
